<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="@dimen/padding_regular"
    android:paddingLeft="@dimen/padding_regular"
    android:paddingTop="@dimen/padding_regular"
    android:paddingBottom="@dimen/padding_short">

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/steps" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider_height"
        android:layout_marginTop="@dimen/padding_short"
        android:background="?android:attr/listDivider"/>

</LinearLayout>